--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,23 +18,42 @@ li {
 
 }
 
+body, html {
+    height: 100%;
+}
 
+.hero-image {
+    background-image:
+    url("https://www.techrepublic.com/a/hub/i/r/2021/02/17/3c192f18-47eb-428a-b64f-ba57fcd3c36a/resize/770x/f6331a1067a7b7fa04ef225a6493d63e/programming-coding.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
 
-
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:black;
+}
 
 
 
 
 
 .box-1 {
-    background: chartreuse;
+
     height: 90px;
     width: 300px;
     
 }
 
 .box-2 {
-    background: coral;
+
     height: 90px;
     width: 300px;
 
@@ -46,7 +65,7 @@ li {
  .box-3 {
      height: 90px;
      width: 300px;
-     background: cornflowerblue;
+
      
   
  }
@@ -54,7 +73,6 @@ li {
 .box-4 {
     height: 90px;
     width: 300px;
-   background: crimson;
 }
 
 
