--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,22 +2,6 @@ li {
     color: white;
 }
 
-.img-container {
-    position: relative;
-    text-align: center;
-}
-
-.bottom-right {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: lightblue;
-    color: #3b3a3e;
-    padding-left: 20px;
-    padding-right: 20px;
-
-}
-
 body, html {
     height: 100%;
 }
@@ -41,39 +25,22 @@ body, html {
     color:black;
 }
 
-
-
-
-
-.box-1 {
-
-    height: 90px;
-    width: 300px;
-    
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr );
+    grid-gap: 10px;
 }
 
-.box-2 {
-
-    height: 90px;
-    width: 300px;
-
-    
-
-    
-    
+.grid-container > div {
+    height: 210px;
+    background: url("https://media.istockphoto.com/vectors/calculator-vector-id531633071?k=20&m=531633071&s=612x612&w=0&h=mEZntyKX_pFEupTpZLV9-asMCkGJk-uA8L0PUEpG-BQ=");
+    background-size: cover;
+    background-attachment: fixed;
 }
- .box-3 {
-     height: 90px;
-     width: 300px;
 
-     
-  
- }
 
-.box-4 {
-    height: 90px;
-    width: 300px;
-}
+
+
 
 
 
