--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,47 @@
-li {
-    color: white;
-}
 
 body, html {
     height: 100%;
 }
+
+nav {
+    background: #222;
+    padding: 0 15px;
+}
+
+a {
+    color: white;
+}
+
+ol, ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    color: white;
+}
+
+.logo {
+    font-size: 20px;
+    padding: 7.5px 10px 7.5px 0;
+
+}
+
+.flex-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-container li a {
+    display: block;
+    padding: 15px 5px;
+
+}
+
+
 
 h2 {
     font-size: 28px;
@@ -29,11 +66,6 @@ h2 {
     color:black;
 }
 
-.about {
-    display: flex;
-    justify-content: right;
-}
-
 .grid-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr );
@@ -46,7 +78,7 @@ h2 {
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
+    align-items: flex-start;
     justify-content: center;
 } 
 
