updated portfolio, added project 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,9 @@ h2 {
     background: url("../Images/horiseon.png")
 }
 
-.led-wall {
+.cosmos {
     color: white ;
-    background: url("../Images/led-wall.jpeg")
+    background: url("../Images/homepg.png")
 }
 
 .calculator {
