--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,8 +97,8 @@ h2 {
     background: url("../Images/homepg.png")
 }
 
-.calculator {
-    background: url("../Images/calculator.jpeg")
+.script-doctors {
+    background: url("../Images/loginpage.png")
 }
 
 .pastel-puzzle {
