--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -2,13 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none; 
+    font-family: 'Playfair Display', serif;
 }
 
-body {
-    font-family: sans-serif;
-    font-size: 16px;
-
-}
 
 
 
