--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 body {
     background-color: #826E91;
     color:white;
-    height: 100%
+    height: 100%;
+    
+   
 
 }
 .top-nav {
@@ -50,4 +52,14 @@ li {
     object-fit: cover;
 }
 
+footer {
+    margin-left:  100px;
+    margin-right: 100px;
+
+}
+#about, #projects, #skills, #contact {
+    margin-left:  100px;
+    margin-right: 100px;
+
+}
 
